change dataset creation procedure

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,23 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/o/work/PycharmProjects/venvs/wrike/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (7,8,30,31,32,33,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/Users/o/work/PycharmProjects/venvs/wrike/lib/python3.7/site-packages/ipykernel_launcher.py:30: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce3586e3fc04f32a847e2d9b4d05e2a",
+       "model_id": "944bf32a5cff46c9946193d61a1ba122",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +54,7 @@
     "            total_pos_score += reaction['count']\n",
     "    return total_pos_score\n",
     "\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "pos_score_dict = {}\n",
     "for row_ind, row in tqdm(df['reactions'].dropna().iteritems()):\n",
@@ -135,7 +125,8 @@
     "            fail_count += 1\n",
     "            \n",
     "    if replies_dict[row_ind]:\n",
-    "        current_best_ans = max([(x, pos_score_dict.get(x, 0)) for x in replies_dict[row_ind]], key=lambda x: x[1])\n",
+    "        row_replies = [(x, pos_score_dict.get(x, 0)) for x in replies_dict[row_ind]]\n",
+    "        current_best_ans = max(row_replies, key=lambda x: x[1])\n",
     "        best_ans[row_ind] = current_best_ans[0]\n",
     "        best_ans_pos_score[row_ind] = current_best_ans[1]"
    ]
